--- a/css/dom_ejercicios.css
+++ b/css/dom_ejercicios.css
@@ -1,136 +1,142 @@
-/* **********   Reset CSS ********** */
+/* **********     Reset CSS     ********** */
 :root {
-    --main-font: sans-serif;
-    --font-size: 16px;
-    --main-color: #f7df1e;
-    --second-color: #222;
-    --main-modal-color: rgba(247, 222, 30, 0.85);
-    --second-modal-color: rgba(34, 34, 34, 0.85);
-    --container-width: 1200px;
-  }
-
-html{
-    box-sizing: border-box;
-    font-family: var(--main-font);
-    font-size: var(--font-size);
-    scroll-behavior: smooth;
+  --main-font: sans-serif;
+  --font-size: 16px;
+  --main-color: #f7df1e;
+  --second-color: #222;
+  --main-modal-color: rgba(247, 222, 30, 0.85);
+  --second-modal-color: rgba(34, 34, 34, 0.85);
+  --container-width: 1200px;
 }
 
-/* Para que todos los elementos hereden de box sizing */
+html {
+  box-sizing: border-box;
+  font-family: var(--main-font);
+  font-size: var(--font-size);
+  scroll-behavior: smooth;
+}
+
 *,
 *:before,
-*:after{
-    box-sizing: inherit;
+*:after {
+  box-sizing: inherit;
 }
 
-/* Para que no genere scrol bar :horizontal sino que haga responsive */
-body{
-    margin:0;
-    overflow-x: hidden;
+body {
+  margin: 0;
+  overflow-x: hidden;
 }
 
-img{
-    max-width: 100%;
-    height: auto;
+img,
+video {
+  max-width: 100%;
+  height: auto;
+}
+
+.flex-row-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* **********   Menú Hamburguesa ********** */
-.header{
-    position: sticky;
-    top: 0%;
-    padding: 1rem;
-    background-color: var(--main-color);
-    color: var(--second-color);
+.header {
+  position: sticky;
+  z-index: 997;
+  top: 0;
+  padding: 1rem;
+  background-color: var(--main-color);
+  color: var(--second-color);
 }
 
-.header h1{
-    margin: 0 auto;
-    text-align: center;
+.header h1 {
+  margin: 0 auto;
+  text-align: center;
 }
 
-.section{
-    padding: 2rem;
-    padding-top: 4rem; /*Permite que el menú vertical no se encime sobre el header que esta con sticky osea fijo*/
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    max-width: var(--container-width);
-    min-height: 100vh;
-    text-align: center;
+.section {
+  padding: 2rem;
+  padding-top: 4rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: var(--container-width);
+  min-height: 100vh;
+  text-align: center;
 }
 
 .panel {
-    position: fixed;
-    z-index: 998;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow-y: auto;
-    background-color: var(--second-modal-color);
-    opacity: 0;
-    visibility: hidden;
-    transition: transform 0.3s ease, opacity 0.5s ease;
-    /* De arriba */
-    /* transform: translate(0, -100%); */
-    /* De abajo */
-    /* transform: translate(0, 100%); */
-    /* De la derecha */
-    transform: translate(100%, 0);
-    /* De la izquierda */
-    /* transform: translate(-100%, 0); */
-  }
-  
-  .panel.is-active {
-    transform: translate(0, 0);
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .panel-btn {
-    position: fixed;
-    z-index: 999;
-    bottom: 1vh;
-    right: 1vw;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--main-color);
-  }
+  position: fixed;
+  z-index: 998;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
+  background-color: var(--second-modal-color);
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.3s ease, opacity 0.5s ease;
+  /* De arriba */
+  transform: translate(0, -100%);
+  /* De abajo */
+  transform: translate(0, 100%);
+  /* De la derecha */
+  transform: translate(100%, 0);
+  /* De la izquierda */
+  transform: translate(-100%, 0);
+}
 
-  .menu {
-    width: inherit;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .menu a {
-    padding: 2rem;
-    width: inherit;
-    display: block;
-    font-size: 1.5rem;
-    text-decoration: none;
-    color: var(--main-color);
-    transition: all 0.3s ease;
-  }
-  
-  .menu a:hover {
-    font-weight: bold;
-    color: var(--second-color);
-    background-color: var(--main-modal-color);
-  }
+.panel.is-active {
+  transform: translate(0, 0);
+  opacity: 1;
+  visibility: visible;
+}
+
+.panel-btn {
+  position: fixed;
+  z-index: 999;
+  bottom: 1vh;
+  right: 1vw;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+}
+
+.menu {
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+
+.menu a {
+  padding: 2rem;
+  width: inherit;
+  display: block;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: var(--main-color);
+  transition: all 0.3s ease;
+}
+
+.menu a:hover {
+  font-weight: bold;
+  color: var(--second-color);
+  background-color: var(--main-modal-color);
+}
 
   /* **********   Eventos del Teclado ********** */
   .stage{
@@ -146,3 +152,63 @@ img{
     border-radius: 50%;
     background-color: var(--main-color);
   }
+
+
+  /* **********   Scroll Top Button ********** */
+  .scroll-top-btn{
+position: fixed;
+z-index: 999;
+bottom: 1vh;
+right: calc(4.25rem + 1vw);
+width: 4rem;
+height: 4rem;
+border-radius: 50%;
+font-size: 2rem;
+font-weight: bold;
+background-color: var(--main-color);
+color: var(--second-color);
+cursor: pointer;
+outline: 0;
+border: 0;
+transition: all 0.3s ease-out;
+}
+
+.scroll-top-btn:hover{
+  background-color: var(--second-color);
+  color: var(--main-color);
+}
+
+.hidden{
+  visibility: hidden;
+  opacity: 0;
+}
+
+
+/* **********     DarkThemeButton     ********** */
+.dark-theme-btn {
+  position: fixed;
+  z-index: 999;
+  bottom: 1vh;
+  left: 1vw;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: var(--main-color);
+  color: var(--second-color);
+  cursor: pointer;
+  outline: 0;
+  border: 0;
+  transition: all 0.3s ease-out;
+}
+
+.dark-theme-btn:hover {
+  background-color: var(--second-color);
+  color: var(--main-color);
+}
+
+.dark-mode {
+  background-color: var(--second-color);
+  color: var(--main-color);
+}
