--- a/css/dom_ejercicios.css
+++ b/css/dom_ejercicios.css
@@ -73,6 +73,7 @@ video {
   left: 0;
   right: 0;
   width: 100%;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -229,4 +230,32 @@ transition: all 0.3s ease-out;
 
 .offline{
   background-color: red;
+}
+
+/* **********     SearchFilters     ********** */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+}
+
+.card {
+  background-color: var(--second-color);
+  color: var(--main-color);
+  transition: all 0.3s ease-out;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card figcaption {
+  padding: 1rem;
+}
+
+.filter {
+  /* display: none; */
+  visibility: none;
+  opacity: 0;
+  order: 1;
 }
