--- a/spa/app/assets/styles.css
+++ b/spa/app/assets/styles.css
@@ -42,6 +42,14 @@ img {
     background-color: brown;
 }
 
+.error mark{
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    display: inline-block;
+    color: antiquewhite;
+    background-color: blue;
+}
+
 .form-search {
     margin: auto;
     text-align: center;
@@ -91,4 +99,41 @@ img {
 .post-card p {
     display: flex;
     justify-content: space-between;
+}
+
+.post-page {
+    margin: 1rem auto;
+    padding: 1rem;
+    width: 80%;
+    background-color: aliceblue;
+}
+
+.post-page > aside {
+    margin: auto;
+    width: 60%;
+    text-align: center;
+}
+
+.post-page > hr {
+    border: thin solid rgb(6, 10, 14);
+    margin: 2rem auto;
+    width: 80%;
+}
+
+.post-page time {    
+    margin: 1rem auto;
+    display: block;
+}
+
+.post-page > article {
+    padding: 0 2rem;
+}
+
+.post-page img,
+.post-page audio,
+.post-page iframe,
+.post-page video {
+    margin: auto;
+    display: block;
+    max-width: 100%;
 }
